--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="My name is William Hoffmann from Brazil. I've been working as software engineer since 2010.">
-    <title>William Hoffmann | Software engineer</title>
+  <meta charset="UTF-8">
+  <meta name="description"
+        content="My name is William Hoffmann from Brazil. I've been working as software engineer since 2010.">
+  <title>William Hoffmann | Software engineer</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <main>
-        <section>
-            <h1>I'm William Hoffmann</h1>
-            <h3>
-                Entrepreneur • Software engineer • Co-Founder & CTO at
-                <a href="http://devninjas.com.br" title="devninjas" target="_blank">devninjas</a> • Brazilian • Sports fan.
-            </h3>
-        </section>
-    </main>
+<body class="personal">
+  <main class="personal__content">
+    <h1 class="personal__content--title">I'm William Hoffmann</h1>
+    <h3 class="personal__content--subtitle">
+      Entrepreneur • Software engineer • Co-Founder & CTO at
+      <a href="http://devninjas.com.br" class="personal__content--link" title="devninjas" target="_blank">devninjas</a>
+      • Brazilian • Sports fan.
+    </h3>
+
+    <ul class="social">
+      <li class="social__item">
+        <a href="https://github.com/willhoffmann" class="social__item--link" title="Github" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li class="social__item">
+        <a href="https://linkedin.com/in/williamhoffmann/" class="social__item--link" title="Linkedin" target="_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </li>
+      <li class="social__item">
+        <a href="https://codepen.io/willhoffmann/" class="social__item--link" title="Codepen" target="_blank">
+          <i class="fab fa-codepen"></i>
+        </a>
+      </li>
+      <li class="social__item">
+        <a href="https://www.instagram.com/willchoffmann/" class="social__item--link" title="Instagram" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </li>
+      <li class="social__item">
+        <a href="mailto:williamhoffmann@outlook.com" class="social__item--link" title="E-mail" target="_blank">
+          <i class="far fa-envelope"></i>
+        </a>
+      </li>
+    </ul>
+  </main>
+
+  <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
+        crossorigin="anonymous"></script>
 </body>
 </html>
