--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main class="personal__content">
     <h1 class="personal__content--title">I'm William Hoffmann</h1>
     <h3 class="personal__content--subtitle">
-      Entrepreneur • Software engineer at
+      Entrepreneur • CTO at
       <a href="http://devninjas.com.br" class="personal__content--link" title="devninjas" target="_blank">devninjas</a>
       • Brazilian • Sports fan.
     </h3>
